--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-mpld3==0.5.8
-dash
-pandas
-matplotlib
-astroquery
+astroquery==0.4.7.dev7761
+dash>=2.7.0
+dash_bootstrap_components==1.1.0
+dash-core-components==2.0.0
+dash-daq==0.5.0
+dash-html-components==2.0.0
+dash-renderer==1.9.0
+dash-table==5.0.0
+pandas==1.4.0
 plotly==5.6.0
